<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_own_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".presentation.events.CreateOwnEventActivity">

    <TextView
        android:id="@+id/add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/add_your_event"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/event_name"
        android:inputType="textNoSuggestions"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_event"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/event_description"
        android:inputType="textNoSuggestions"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/favorite_btn"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:background="@drawable/heart_empty"
        android:baselineAligned="false"
        android:onClick="buttonSetEventOnClick"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description" />

    <TextView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/favorite"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:importantForAutofill="no"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toEndOf="@id/favorite_btn"
        app:layout_constraintTop_toBottomOf="@+id/event_description" />


    <Button
        android:id="@+id/select_date"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:background="@drawable/ic_choose_date"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:baselineAligned="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:paddingBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_btn" />

    <TextView
        android:id="@+id/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:drawablePadding="10dp"
        android:hint="@string/due_date"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/due_datetime"
        app:layout_constraintEnd_toEndOf="@+id/due_datetime"
        app:layout_constraintStart_toEndOf="@id/select_date"
        app:layout_constraintTop_toBottomOf="@+id/favorite" />

    <Button
        android:id="@+id/select_datetime"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:background="@drawable/ic_choose_time"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:baselineAligned="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:paddingBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_date" />

    <TextView
        android:id="@+id/due_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:drawablePadding="10dp"
        android:hint="@string/due_datetime"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toEndOf="@id/select_date"
        app:layout_constraintTop_toBottomOf="@+id/due_date" />


    <Spinner
        android:id="@+id/select_event_label"
        style="?android:attr/spinnerItemStyle"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:baselineAligned="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:background="@drawable/ic_event_tag"
        android:textStyle="bold"
        android:paddingBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/due_datetime" />

    <TextView
        android:id="@+id/event_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:drawablePadding="10dp"
        android:hint="@string/event_label_name"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toEndOf="@id/select_event_label"
        app:layout_constraintTop_toBottomOf="@+id/due_datetime" />

    <Button
        android:id="@+id/clear_event_labels"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:background="@drawable/ic_refresh"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:baselineAligned="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:paddingBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/due_datetime" />


    <Button
        android:id="@+id/save_event"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginBottom="@dimen/icon_bottom_margin"
        android:background="@drawable/green_with_black_border"
        android:baselineAligned="false"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_label" />




</androidx.constraintlayout.widget.ConstraintLayout>