...
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/create_your_label"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/label_name"
...
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_own_label"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/save_label"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginStart="40dp"
        android:background="@drawable/green_with_black_border"
        android:baselineAligned="false"
        android:text="@string/save"
...
