<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item android:id="@+id/add_new_label"
            android:icon="@drawable/ic_add_event"
            android:title="@string/create_new_label"
            app:showAsAction="ifRoom"/>

    </group>
</menu>